// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideBar > should match snapshot with expanded state 1`] = `
<DocumentFragment>
  <nav
    aria-label="Sidebar Navigation"
    class="mocked-styled-7 el-side-bar"
  >
    <ul
      class="mocked-styled-8 elside-bar-menu-list"
      data-state="expanded"
    >
      SideBar list content
    </ul>
    <div
      class="mocked-styled-3 el-side-bar-collapse-button-container"
      data-is-expanded="true"
    >
      <button
        aria-expanded="true"
        class="el-side-bar-menu-item-anchor el-side-bar-collapse-button"
      >
        <svg
          class="mocked-styled-5 el-collapse-icon"
          data-is-expanded="false"
          fill="none"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="collapse"
          >
            <g
              id="Vector"
            >
              <path
                d="M2.6665 5.00004C2.6665 4.63185 2.96498 4.33337 3.33317 4.33337C3.70136 4.33337 3.99984 4.63185 3.99984 5.00004V15C3.99984 15.3682 3.70136 15.6667 3.33317 15.6667C2.96498 15.6667 2.6665 15.3682 2.6665 15V5.00004Z"
                fill="#798DA1"
              />
              <path
                d="M11.3054 5.36197C11.045 5.10162 10.6229 5.10162 10.3626 5.36197L6.21515 9.5094C6.08604 9.62823 6.00395 9.79738 5.99999 9.98574L5.99982 10.0009C5.99982 10.1777 6.07008 10.3473 6.19513 10.4723L10.3626 14.639C10.623 14.8993 11.0451 14.8993 11.3054 14.6389C11.5658 14.3785 11.5657 13.9564 11.3053 13.6961L8.27535 10.6667H16.6665C17.0347 10.6667 17.3332 10.3682 17.3332 10C17.3332 9.63185 17.0347 9.33337 16.6665 9.33337H8.27679L11.3054 6.30478C11.5657 6.04443 11.5657 5.62232 11.3054 5.36197Z"
                fill="#798DA1"
              />
            </g>
          </g>
        </svg>
        <span
          class="mocked-styled-6 el-side-bar-collapse-text"
        >
          Collapse
        </span>
      </button>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`SideBar > should match snapshot with simple state 1`] = `
<DocumentFragment>
  <nav
    aria-label="Sidebar Navigation"
    class="mocked-styled-7 el-side-bar"
  >
    <ul
      class="mocked-styled-8 elside-bar-menu-list"
      data-state="simple"
    >
      SideBar list content
    </ul>
    <div
      class="mocked-styled-3 el-side-bar-collapse-button-container"
      data-is-expanded="false"
    >
      <button
        aria-expanded="false"
        class="el-side-bar-menu-item-anchor el-side-bar-collapse-button"
      >
        <svg
          class="mocked-styled-5 el-collapse-icon"
          data-is-expanded="true"
          fill="none"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="collapse"
          >
            <g
              id="Vector"
            >
              <path
                d="M2.6665 5.00004C2.6665 4.63185 2.96498 4.33337 3.33317 4.33337C3.70136 4.33337 3.99984 4.63185 3.99984 5.00004V15C3.99984 15.3682 3.70136 15.6667 3.33317 15.6667C2.96498 15.6667 2.6665 15.3682 2.6665 15V5.00004Z"
                fill="#798DA1"
              />
              <path
                d="M11.3054 5.36197C11.045 5.10162 10.6229 5.10162 10.3626 5.36197L6.21515 9.5094C6.08604 9.62823 6.00395 9.79738 5.99999 9.98574L5.99982 10.0009C5.99982 10.1777 6.07008 10.3473 6.19513 10.4723L10.3626 14.639C10.623 14.8993 11.0451 14.8993 11.3054 14.6389C11.5658 14.3785 11.5657 13.9564 11.3053 13.6961L8.27535 10.6667H16.6665C17.0347 10.6667 17.3332 10.3682 17.3332 10C17.3332 9.63185 17.0347 9.33337 16.6665 9.33337H8.27679L11.3054 6.30478C11.5657 6.04443 11.5657 5.62232 11.3054 5.36197Z"
                fill="#798DA1"
              />
            </g>
          </g>
        </svg>
      </button>
    </div>
  </nav>
</DocumentFragment>
`;
